# ShmitSource

./: .clang-format  .gitignore  CMakeLists.txt  GenerateRatioTest.py  README.md  StrTest.cpp  TODOs  googletest.CMakeLists.txt.in  test.cpp  toolchain-STM32F407.cmake
Development/Core/Control/Include/: ControllerInterface.hpp
Development/Core/Include/Containers/: Buffer.hpp  Container.hpp
Development/Core/Include/Control/: TransferFunctionQueue.hpp
Development/Core/Include/FrameOfReference/: FrameOfReferenceDataSet.hpp
Development/Core/Include/Memory/: SharedPointer.hpp
Development/Core/Types/: StdIncludes.hpp
Development/Core/Types/FrameOfReference/Include/: CartesianDataSet.hpp  CartesianDefines.hpp  FrameOfReferenceDataSet.hpp  SixAxisDataSet.hpp
Development/Include/ShmitCore/: Named.hpp  Status.hpp  StdIncludes.hpp  StringConstant.hpp
Development/Include/ShmitCore/Compute/FrameOfReference/: FrameOfReferenceDataSet.hpp
Development/Include/ShmitCore/Compute/TransferFunction/: TransferFunction.hpp
Development/Include/ShmitCore/Containers/: Buffer.hpp
Development/Include/ShmitCore/Containers/Detail/: Buffer.hpp
Development/Include/ShmitCore/Context/: Contex.hpp
Development/Include/ShmitCore/Control/: ControllerInterface.hpp  TransferFunctionQueue.hpp
Development/Include/ShmitCore/Help/: CString.hpp  Data.hpp  Integer.hpp  Ratio.hpp  String.hpp
Development/Include/ShmitCore/Logging/: Category.hpp  Common.hpp  Context.hpp  Defines.hpp  Diagnostics.hpp  Element.hpp  Events.hpp  Logger.hpp  OStreamLogger.hpp  Posit.hpp  StaticEventLoggingInterface.hpp  StaticInterface.hpp  String.hpp  Types.hpp  VoidLogger.hpp
Development/Include/ShmitCore/Logging/Data/: Logging.hpp  StaticLogging.hpp
Development/Include/ShmitCore/Logging/Detail/: Element.hpp  Interface.hpp  StaticInterface.hpp
Development/Include/ShmitCore/Logging/Diagnostics/: DataPoints.hpp  Interactions.hpp  Logging.hpp  StaticLogging.hpp
Development/Include/ShmitCore/Logging/Events/: Logging.hpp  StaticLogging.hpp
Development/Include/ShmitCore/Logging/Loggers/: Logger.hpp  LoggerInterface.hpp  OStreamLogger.hpp  StdoutLogger.hpp  VoidLogger.hpp
Development/Include/ShmitCore/Math/: Denomination.hpp  Ratio.hpp  StaticArithmetic.hpp  StdAlgorithms.hpp
Development/Include/ShmitCore/Math/Algorithms/: StdAlgorithms.hpp
Development/Include/ShmitCore/Memory/: AllocationPool.hpp  MemoryModel.hpp  MemoryPool.hpp  MemoryTypes.hpp
Development/Include/ShmitCore/Memory/Pools/: AllocationPool.hpp  MemoryPool.hpp
Development/Include/ShmitCore/Platform/: AtomicPrimitive.hpp  Clock.hpp  Help.hpp  MemoryHelp.hpp  PlatformDefines.hpp  PlatformInterface.hpp  PrimitiveAtomic.hpp  SystemClock.hpp  Time.hpp  TypeHelp.hpp
Development/Include/ShmitCore/Platform/Interfaces/: AtomicInterface.hpp  MemoryInterface.hpp
Development/Include/ShmitCore/Platform/Memory/: Utility.hpp
Development/Include/ShmitCore/Time/: Clock.hpp  Denominations.hpp  Duration.hpp  Instant.hpp  Timer.hpp
Development/Include/ShmitCore/Types/: Contex.hpp  Ratio.hpp  SharedPointer.hpp  StdTypes.hpp  TypeHelp.hpp
Development/Include/ShmitCore/Types/Allocators/: PotentiallyAllocatedData.hpp
Development/Include/ShmitCore/Types/Atomic/: AtomicFundamental.hpp  AtomicNumeric.hpp  AtomicPrimitive.hpp  AtomicValue.hpp
Development/Include/ShmitCore/Types/Containers/: Array.hpp  Buffer.hpp  BufferImpl.hpp  Container.hpp  Queue.hpp  SequentialContainer.hpp
Development/Include/ShmitEmbedded/Types/: String.hpp
Development/ROS/src/shmittys_msgs/: CMakeLists.txt  package.xml
Development/ShmitCore/: CMakeLists.txt  Named.cpp
Development/ShmitCore/Containers/: CMakeLists.txt
Development/ShmitCore/Containers/Detail/: Buffer.cpp
Development/ShmitCore/Help/: CMakeLists.txt  Integer.cpp
Development/ShmitCore/Logging/: CMakeLists.txt  Common.cpp  Logger.cpp  Posit.cpp  StdoutLogger.cpp  String.cpp  VoidLogger.cpp
Development/ShmitCore/Logging/Data/: CMakeLists.txt  StaticLogging.cpp
Development/ShmitCore/Logging/Detail/: Interface.cpp
Development/ShmitCore/Logging/Diagnostics/: CMakeLists.txt  DataPoints.cpp  Logging.cpp  StaticLogging.cpp
Development/ShmitCore/Logging/Events/: CMakeLists.txt  Logging.cpp  StaticLogging.cpp
Development/ShmitCore/Logging/Loggers/: CMakeLists.txt  Logger.cpp  StdoutLogger.cpp  VoidLogger.cpp
Development/ShmitCore/Logging/Loggers/src/: StdoutLogger.cpp  VoidLogger.cpp
Development/ShmitCore/Logging/src/: Level.cpp  StaticEventLoggingInterface.cpp
Development/ShmitCore/Memory/: CMakeLists.txt  MemoryPool.cpp
Development/ShmitCore/Platform/: CMakeLists.txt  MemoryHelp.cpp  Time.cpp
Development/ShmitCore/Platform/Clock/: CMakeLists.txt  SystemClock.cpp
Development/ShmitCore/Time/: CMakeLists.txt  Duration.cpp  Instant.cpp  Timer.cpp
Development/ShmitCore/Types/: CMakeLists.txt  TypeHelp.cpp
Development/ShmitCore/Types/Containers/: CMakeLists.txt
Development/ShmitCore/Types/Containers/Detail/: Buffer.cpp
Development/ShmitCore/Types/Containers/unit-test/: Buffer.cc
Development/ShmitCore/Types/Context/: Context.cpp
Development/ShmitCore/Types/Generic/: CMakeLists.txt  Named.cpp
Development/ShmitCore/Types/Memory/: CMakeLists.txt  MemoryPool.cpp
Development/ShmitCore/Types/Memory/src/: MemoryPool.cpp
Development/ShmitCore/Types/Traits/: CMakeLists.txt  Named.cpp
Development/ShmitCore/Types/src/Context/: Context.cpp
Development/Source/ShmitCore/Platform/: AtomicPrimitive.cpp  PrimitiveAtomic.cpp  TypeHelp.cpp
Development/Source/ShmitCore/Types/: TypeHelp.cpp
Test/: BufferTest  TestBuffer.cpp
Test/Include/Fixtures/Containers/: SequenceContainerTest.hpp
Test/ShmitCore/: CMakeLists.txt
Test/ShmitCore/Containers/: BufferTest.cpp  CMakeLists.txt
Test/ShmitCore/Math/: CMakeLists.txt  RatioTest.cpp
Test/ShmitCore/Time/: DurationTest.cpp
Test/ShmitCore/Types/: CMakeLists.txt
Test/ShmitCore/Types/Containers/: Buffer.cpp  BufferTest.cpp  Buffer_Experimental.cpp  CMakeLists.txt
Test/ShmitCore/Types/Containers/UnitTest/: Buffer.cpp
(+17 files in other folders)
